<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidRobertoFutbol</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register_user">RegisterUser</string>
    <string name="title_activity_inicio_user">InicioUser</string>
    <string name="title_activity_aplicacion_futbol">AplicacionFutbol</string>
    <string name="title_activity_equipos">Equipos</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Registrar</string>
    <string name="title_activity_application">Home</string>
    <string name="add_button_label">Add</string>
    <string name="save_button_label">Save</string>
    <string name="delete_button_label">Delete</string>
    <string name="agregar">Ajustes</string>
    <string name="title_activity_aplicacion">Aplicacion</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_persona">Persona</string>

    <!-- REGISTRO USER -->

    <string name="nombre_registro">Usuario</string>
    <string name="gmail_registro">Email</string>
    <string name="contra_registro">Contraseña</string>
    <string name="confirmacion_registro">Confirmacion Registro</string>
    <string name="welcome_label">Bienvenido</string>
    <string name="registrarse_boton">Registrarse</string>

    <!-- INICIO USERS -->

    <string name="correo_login">email</string>
    <string name="clave_login">ingrese clase</string>
    <string name="login_button">Inicio </string>

    <!-- EQUIPOS -->

    <string name="name_equipo">Nombre equipo</string>
    <string name="ranking_equipo">Posicion fifa</string>
    <string name="mundiales_equipo">mundiales ganado</string>

    <!-- EQUIPOS -->

    <string name="contenido_app">Contenido</string>
    <string name="agregar_app">Agregar Equipo</string>
    <string name="logout_app">Salir</string>

    <!-- Activityfutbol -->

    <string name="futbol">Contenido</string>
    <string name="logout">Salir</string>
    <string name="perfil">Ingresar Equipo</string>
    <string name="title_activity_jugadores">JugadoresActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="notas">Noticias!</string>
    <string name="actual">Actualidad</string>
    <string name="info_2">2- Argentina sonríe, Chile y Uruguay aprietan los dientes: La suerte mostró dos caras para los equipos de habla hispana en el Sorteo Final de la Copa Mundial de la FIFA Brasil 2014™.</string>
    <string name="info">1- Chile clasifica al mundial Brasil 2013 ganando su ultimo partido ante Ecuador por 2 a 1</string>
    <string name="info_3">3- Solicitadas casi 1,2 millones de entradas</string>
    <string name="favoritos">Tu equipo favorito!</string>
    <string name="title_activity_favoritos">Favoritos</string>
    <string name="check1">CHILE</string>
    <string name="check2">BRASIL</string>
    <string name="check3">ESPAÑA</string>
    <string name="check4">ALEMANIA</string>
    <string name="check5">PORTUGAL</string>
    <string name="check6">ARGENTINA</string>
    <string name="check7">HOLANDA</string>
    <string name="seleccionar">Seleccione sus equipos favoritos</string>
    <string name="enviarformulario">Submit!!</string>
    <string name="title_activity_favoritos1">Favoritos1</string>
    <string name="title_activity_encuesta">EncuestaActivity</string>

</resources>
