<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Equipos" >

    <EditText
        android:id="@+id/paisEquipo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_equipo"
        android:layout_marginTop="30dp"
        android:textColorHint="#0000ff"
        android:inputType="text" />

    <EditText
        android:id="@+id/rankingEquipo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ranking_equipo"
        android:layout_marginTop="40dp"
        android:textColorHint="#00ff00"
        android:inputType="text" />

    <EditText
        android:id="@+id/mundialesEquipo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mundiales_equipo"
        android:textColorHint="#0000ff"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:onClick="deleteteam"
        android:text="@string/delete_button_label"
        android:visibility="invisible" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:onClick="saveteam"
        android:textColor="#0000ff"
        android:text="@string/save_button_label" />

</LinearLayout>