<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AplicacionFutbol" >

    <TextView
            android:id="@+id/nameTextViewApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_below="@+id/contenidoApp"
        android:layout_toRightOf="@+id/nameTextViewApp" >
    </ListView>

    <Button
        android:id="@+id/agregarApp"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/contenidoApp"
        android:layout_alignTop="@+id/nameTextViewApp"
        android:onClick="agregarclick"
        android:layout_marginTop="50dp"
        android:text="@string/agregar_app" 
        android:textColor="#00ff00"/>

    <Button
        android:id="@+id/contenidoApp"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameTextViewApp"
        android:layout_below="@+id/agregarApp"
        android:onClick="vercontenido"
        android:text="@string/contenido_app" 
        android:textColor="#ffff00"/>

    <Button
        android:id="@+id/notas_futbol"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/logoutApp"
        android:layout_alignTop="@android:id/list"
        android:layout_marginTop="150dp"
        android:text="@string/notas"
        android:onClick="vernoticias" 
        android:textColor="#ffff00"/>

    <Button
        android:id="@+id/logoutApp"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@android:id/list"
        android:layout_alignParentRight="true"
        android:onClick="logoutclick"
        android:text="@string/logout_app"
        android:textColor="#0000ff" />

</RelativeLayout>